# tmp-app-bitcoin-new-ci-setup

./: .gitignore  Makefile  ledger_app.toml
.github/workflows/: build_and_functional_tests.yml  builder-image-workflow.yml  ci-workflow.yml  codeql-workflow.yml  guidelines-enforcer.yml  lint-workflow.yml  sonarcloud.yml  swap-ci-workflow.yml
bitcoin_client/ledger_bitcoin/: __init__.py  client.py  client_base.py  client_command.py  client_legacy.py  command_builder.py  elements_tx.py  psbt.py  pset.py  wallet.py
dev-tools/: tag_apdus.py
doc/: integration_guide.md  liquid.md  liquid_wallet.md
ragger_bitcoin/: ragger_bitcoin.py
src/: commands.h  constants.h  context.h  crypto.c  crypto.h  cxram_stash.h  globals.h  liquid.h  main.c  main.h  tests.c  tests.h  util.h
src/boilerplate/: dispatcher.c  dispatcher.h  io.c
src/common/: base58.c  base58.h  bip32.c  bip32.h  bitvector.h  blech32.h  buffer.c  buffer.h  format.c  liquid_addr.c  liquid_addr.h  merkle.c  merkle.h  parser.c  parser.h  psbt.h  pset.h  script.c  script.h  segwit_addr.c  segwit_addr.h  varint.c  varint.h  wallet.c  wallet.h  wif.c  wif.h
src/debug-helpers/: debug.c  debug.h  printf.c  printf.h
src/handler/: get_extended_pubkey.c  get_extended_pubkey.h  get_master_fingerprint.c  get_master_fingerprint.h  get_wallet_address.c  get_wallet_address.h  handlers.h  liquid_get_blinding_key.c  liquid_get_blinding_key.h  liquid_get_master_blinding_key.c  liquid_get_master_blinding_key.h  liquid_sign_pset.c  liquid_sign_pset.h  register_wallet.c  register_wallet.h  sign_message.c  sign_message.h  sign_psbt.c  sign_psbt.h
src/handler/lib/: check_merkle_tree_sorted.c  check_merkle_tree_sorted.h  get_merkle_leaf_element.c  get_merkle_leaf_hash.c  get_merkle_leaf_index.c  get_merkle_preimage.c  get_merkleized_map.c  get_merkleized_map_value.c  get_merkleized_map_value.h  get_merkleized_map_value_hash.c  get_preimage.c  policy.c  policy.h  psbt_parse_rawtx.c  psbt_parse_rawtx.h  pset_parse_rawtx.c  pset_parse_rawtx.h  stream_merkle_leaf_element.c  stream_merkleized_map_value.c  stream_preimage.c
src/handler/sign_psbt/: compare_wallet_script_at_path.c  compare_wallet_script_at_path.h  get_fingerprint_and_path.h  is_in_out_internal.c  is_in_out_internal.h  update_hashes_with_map_value.c  update_hashes_with_map_value.h
src/legacy/: btchip_apdu_get_coin_version.c  btchip_apdu_get_wallet_public_key.c  btchip_apdu_sign_message.c  btchip_transaction.c  handle_check_address.c  main_old.c
src/liquid/: blech32.c  blech32.h  contract_parser.c  contract_parser.h  liquid.c  liquid.h  liquid_addr.c  liquid_addr.h  liquid_asset_metadata.c  liquid_asset_metadata.h  liquid_assets.c  liquid_assets.h  liquid_assets_tests.h  liquid_hash_wrappers.h  liquid_proofs.c  liquid_proofs.h  liquid_proofs_test_data.h  liquid_proofs_tests.c  liquid_proofs_tests.h  liquid_pset.c  liquid_pset.h  liquid_tests.h  liquid_wallet.c  liquid_wallet.h
src/swap/: btchip_bcd.c  btchip_bcd.h  handle_check_address.c  handle_check_address.h  handle_get_printable_amount.c  handle_get_printable_amount.h  handle_swap_sign_transaction.c  handle_swap_sign_transaction.h  swap_lib_calls.h
src/ui/: display.c  display.h  display_bagl.c  display_nbgl.c  display_utils.c  display_utils.h  menu.c  menu_bagl.c  menu_liquid.c  menu_nbgl.c
test_utils/: fixtures.py  requirements.txt
tests/: requirements.txt  test_e2e_multisig.py  test_get_extended_pubkey.py  test_sign_psbt.py
tests_liquid/: README.md  conftest.py  instructions.py  requirements.txt  test_dashboard.py  test_get_blinding_key.py  test_get_extended_pubkey.py  test_get_master_blinding_key.py  test_get_wallet_address.py  test_register_blinded_wallet.py  test_register_wallet.py  test_sign_message.py  test_sign_pset.py
tests_liquid/automations/: sign_with_any_wallet_accept.json
tests_liquid/pset/: asset_metadata.json  asset_metadata_no_ticker.json  asset_operations.json  sighash_flags.json  sighashes_multi_input.json  test_data.json  unknown_asset.json
tests_liquid/pset/singlesig/: single_confidential.psbt
tests_liquid_main/: README.md  conftest.py  test_get_wallet_address.py
tests_liquid_main/wallets/: wallets_elip150.json
unit-tests/: CMakeLists.txt  README.md  mock_crypto.c  test_apdu_parser.c  test_asset_metadata.c  test_base58.c  test_bip32.c  test_bitvector.c  test_buffer.c  test_contract_parser.c  test_crypto.c  test_display_utils.c  test_format.c  test_liquid.c  test_liquid_addr.c  test_liquid_assets.c  test_parser.c  test_script.c  test_wallet.c  test_wif.c  test_write.c
unit-tests/lib/sha-2/: sha-256.c  sha-256.h
unit-tests/libs/: crypto_mocks.c  crypto_mocks.h  sha-256.c  sha-256.h
unit-tests/mock_includes/: lcx_hash.h  lcx_sha256.h  ledger_assert.h  os.h
